<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Livenglish</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_save">SAVE</string>
    <string name="text_title_pt">Title in portuguese</string>
    <string name="text_title_en">Title in english</string>
    <string name="title_create_dialog_majority_note">New majority note</string>
    <string name="title_create_dialog_minor_note">New minor note</string>
    <string name="msg_create_note">A new note was created</string>
    <string name="msg_create_note_cancel">canceled</string>
    <string name="msg_create_phrase">A new phrase was created</string>
    <string name="msg_create_phrase_cancel">canceled</string>
    <string name="text_empty">You still don\'t have any notes</string>
    <string name="title_activity_splashscreen">LivEnglish</string>
    <string name="dialog_validate">VALIDATE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="majority_note_label">Majority Note</string>
    <string name="minor_note_label">Minor Note</string>
    <string name="title_activity_drawer_layout">DrawerLayout</string>
    <string name="dialog_creator_label">Dialog Creator</string>
    <string name="about_label">About App</string>
    <string name="settings_label">Settings</string>
    <string name="other_label">Other</string>
    <string name="facebook_app_id">1523392324603264</string>

    <string name="parse_app_id">04BFbyj72fzANpjeAGsMpplJ4H7mxFc7Pc0k477u</string>
    <string name="parse_client_key">t8NaJBnEMWt3yIoogNVmJ4uUUpUMca9iNNbkW6N0</string>
    <string name="title_activity_login">Login</string>
    <string name="login_btn">Login com Facebook</string>
    <string name="logout">Logout</string>
    <string name="dialog_create_new_title">New note</string>

    <string name="dialog_body">Are you sure?</string>
    <string name="dialog_delete_phrase">Delete phrase</string>
    <string name="dialog_delete_btn">Delete</string>
    <string name="dialog_delete_button">Delete</string>
    <string name="dialog_limit_title">Congratulations!</string>
    <string name="dialog_limit_body_majority">Four phrases is enough to learn a new "majority" expression</string>
    <string name="dialog_limit_body_minor">One phrase is enough to learn a new "minor" expression</string>

</resources>
