<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="7dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_en"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edt_note_title_en"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLength="70" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_pt"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edt_note_title_pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="26dp"
        android:baselineAligned="false"
        android:gravity="right"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/note_create_dialog_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:background="@drawable/background"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/background"
                android:gravity="center"
                android:text="@string/dialog_cancel"
                android:textColor="@drawable/text_non_important"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/note_create_dialog_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:background="@drawable/background"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:background="@drawable/background"
                android:gravity="center"
                android:text="@string/dialog_save"
                android:textColor="@drawable/text_important"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>