<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:padding="7dp"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_title_en"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/edt_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="70"
        android:layout_gravity="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:baselineAligned="false"
        android:gravity="right"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/phrase_create_dialog_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:background="@drawable/background"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:gravity="center"
                android:text="@string/dialog_cancel"
                android:textStyle="bold"
                android:background="@drawable/background"
                android:textColor="@drawable/text_non_important" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phrase_create_dialog_btn_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:gravity="center_horizontal"
            android:background="@drawable/background"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:gravity="center"
                android:text="@string/dialog_validate"
                android:textStyle="bold"
                android:background="@drawable/background"
                android:textColor="@drawable/text_non_important"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phrase_create_dialog_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:background="@drawable/background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:gravity="center"
                android:text="@string/dialog_save"
                android:textStyle="bold"
                android:background="@drawable/background"
                android:textColor="@drawable/text_important"/>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>